# vision

./: .gitignore  CMakeLists.txt  README.md  build.sh  icon.qrc  postinst  prerm
dbc/: config.yaml  config.yaml.bk  dds-config.xml  default.yaml  lock.ini  remember.yaml
dbc/ogre_media/: plugins.cfg
dbc/ogre_media/fonts/: README.md  ogre1.9.fontdef
dbc/ogre_media/fonts/liberation-sans/: SIL Open Font License.txt
dbc/ogre_media/materials/glsl120/: black.frag  depth.frag  depth.vert  depth_circle.frag  flat_color.frag  flat_color_circle.frag  glsl120.program  indexed_8bit_image.frag  indexed_8bit_image.vert  pass_color.frag  pass_color_circle.frag  pickcolor.frag  pickcolor_circle.frag  point.vert  shaded_circle.frag  smooth_square.frag  test_glsl.sh
dbc/ogre_media/materials/glsl120/nogp/: billboard.vert  (+4 more)
dbc/ogre_media/materials/glsl150/: billboard.geom  box.geom  glsl150.program  pass_pos_color.vert
dbc/ogre_media/materials/scripts/: default_pick_and_depth.material  indexed_8bit_image.material  point_cloud_point.material  point_cloud_tile.material
dbc/proto/: ApaRenderProto.proto  CaApaPNCCommon.proto  SabDiag.proto  adasmap.proto  adasmap_diagnosis.proto  adr_recordinfo.proto  adr_sendeventinfo.proto  aeb.proto  apadcs.proto  apadcs_hzpmapping.proto  apamcu2soc.proto  apamts.proto  apamts_debug.proto  apapcs.proto  apapcsdebug.proto  apapcsrads2zm.proto  apastmhmi.proto  app_pakingorder.proto  busadasmap.proto  busbcm.proto  buseps.proto  busesp.proto  bushuset.proto  busims.proto  busip.proto  busmfs.proto  busrbm.proto  ca_appendix.proto  ca_location.proto  camera.proto  common.proto  dcs.proto  diagnosis.proto  ego_info.proto  ems.proto  erc.proto  forstmodc.proto  fromgrd.proto  functioninfo.proto  fusion_detection.proto  (+51 more)
dbc/proto/idraw/: IdrawContent.proto
script/: cavision.sh
src/: main.cpp  version.h.in
src/ca_compoments/: CMakeLists.txt
src/ca_compoments/include/camera_compoments/: ccamera.h  cslider.h
src/ca_compoments/include/chart/: cchart.h  cchart_view.h  cchart_view_cursor.h
src/ca_compoments/include/topview_compoments/: cgraphics_scene.h  cgraphics_view.h  cvehicle_background_item.h
src/ca_compoments/include/topview_compoments/item_compoments/: cline_item.h  cobject_item.h  cpoint_item.h  cpoint_set_item.h
src/ca_compoments/include/topview_compoments/setter_compoments/: csetter_tab_widget.h  csetter_widget.h  ctab_bar.h
src/ca_compoments/src/camera_compoments/: ccamera.cpp  cslider.cpp
src/ca_compoments/src/chart/: cchart.cpp  cchart_view.cpp  cchart_view_cursor.cpp
src/ca_compoments/src/topview_compoments/: cgraphics_scene.cpp  cgraphics_view.cpp  cvehicle_background_item.cpp
src/ca_compoments/src/topview_compoments/item_compoments/: cline_item.cpp  cobject_item.cpp  cpoint_item.cpp  cpoint_set_item.cpp
src/ca_compoments/src/topview_compoments/setter_compoments/: csetter_tab_widget.cpp  csetter_widget.cpp
src/ca_widgets/: CMakeLists.txt
src/ca_widgets/doc/: 规划模块框图.drawio  视觉输出框图.drawio  预测模块框图.drawio
src/ca_widgets/include/: ccamera_widget.h  cexplorer_box.h  cgraphic_widget.h  cvehicle_topview_widget.h  cvision_widget.h
src/ca_widgets/src/: ccamera_widget.cpp  cexplorer_box.cpp  cgraphic_widget.cpp  cvehicle_topview_widget.cpp  cvision_widget.cpp
src/common/: CMakeLists.txt
src/common/include/: DDSData.h  cglobal_param.h  csignal_manager.h  ctransfer.h  dds_data.h  raw_data.pb.h
src/common/include/data_struct/: camera_struct.h  ccamera_struct.h  cdat_struct.h  clane_struct.h  cline_struct.h  cmap_struct.h  cobj_struct.h  cpathplanning_struct.h  cpoint_struct.h  cprediction_struct.h  creferenceline_struct.h  cvehicle_struct.h  cvision_obj_struct.h  cvision_rle_struct.h
src/common/include/proto_pool/: cproto_pool.h
src/common/include/stm/: cstm_error_message.h
src/common/include/thread_pool/: csafe_queue.h  cthread_pool.h
src/common/include/yaml/: cyaml_handler.h
src/common/src/: DDSData.cpp  cglobal_param.cpp  dds_data.cpp  raw_data.pb.cpp
src/common/src/proto_pool/: cproto_pool.cpp
src/common/src/stm/: cstm_error_message.cpp
src/common/src/thread_pool/: cthread_pool.cpp
src/common/src/yaml/: cyaml_handler.cpp
src/data_center/: CMakeLists.txt
src/data_center/include/: cdata_center.h  cdata_map.h
src/data_center/src/: cdata_center.cpp
src/data_producer/: CMakeLists.txt
src/data_producer/doc/: DDS编码及调试.docx  dds订阅流程.drawio
src/data_producer/include/: cdata_producer.h  cload_data.h  creceive_data.h
src/data_producer/src/: cdata_producer.cpp  cload_data.cpp  creceive_data.cpp
src/data_record/: CMakeLists.txt
src/data_record/include/: cdata_point_record.h  cdata_record.h  cdata_total_record.h  cpoint_record.h
src/data_record/src/: cdata_point_record.cpp  cdata_record.cpp  cdata_total_record.cpp  cpoint_record.cpp
src/data_scheduler/: CMakeLists.txt
src/data_scheduler/include/: cabstract_scheduler.h  ccamera_scheduler.h  cchart_scheduler.h  cdata_scheduler.h  ctopview_scheduler.h  cvision_scheduler.h
src/data_scheduler/src/: ccamera_scheduler.cpp  cchart_scheduler.cpp  cdata_scheduler.cpp  ctopview_scheduler.cpp  cvision_scheduler.cpp
src/main_view/: CMakeLists.txt
src/main_view/include/: cmain_widget.h  cmain_window.h  cmdi_area.h  cwindow_manager.h
src/main_view/src/: cmain_widget.cpp  cmain_window.cpp  cmdi_area.cpp  cwindow_manager.cpp
src/parser/: CMakeLists.txt
src/parser/include/: abstract_parser.h  camera_parser.h  capilot_image_frame.h  ccamline_parser.h  cffmpeg_decode.h  cfreespace_parser.h  cobject_parser.h  cparser_manager.h  cpoint_set_parser.h  csda_common_parser.h  csda_lidar_parser.h  csda_parser.h  csda_prediction_parser.h  csda_rle_decode.h  csda_vision_parser.h  csignal_filter.h  cswc_parser.h
src/parser/src/: abstract_parser.cpp  camera_parser.cpp  ccamline_parser.cpp  cffmpeg_decode.cpp  cfreespace_parser.cpp  cobject_parser.cpp  cparser_manager.cpp  cpoint_set_parser.cpp  csda_common_parser.cpp  csda_lidar_parser.cpp  csda_parser.cpp  csda_prediction_parser.cpp  csda_rle_decode.cpp  csda_vision_parser.cpp  csignal_filter.cpp  cswc_parser.cpp
(+11 files in other folders)
